dsp: Generate states from openapi spec
