# pycxids/core/http_binding/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  http_binding_openapi.yaml
-#   timestamp: 2023-06-01T21:25:37+00:00
+#   timestamp: 2023-06-03T13:25:44+00:00
 
 from __future__ import annotations
 
@@ -23,7 +23,7 @@ class CatalogRequestMessage(MyBaseModel):
     filter: Optional[DspaceFilter] = None
 
 
-class DspaceEventType(Enum):
+class DspaceEventType(str, Enum):
     finalized = 'FINALIZED'
     accepted = 'ACCEPTED'
     terminated = 'TERMINATED'
@@ -40,7 +40,7 @@ class ContracNegotiationEventMessage(MyBaseModel):
     dspace_event_type: Optional[DspaceEventType] = Field(None, alias='dspace:eventType')
 
 
-class DspaceState(Enum):
+class NegotiationState(str, Enum):
     requested = 'REQUESTED'
     offered = 'OFFERED'
     accepted = 'ACCEPTED'
@@ -50,7 +50,7 @@ class DspaceState(Enum):
     terminated = 'TERMINATED'
 
 
-class DspaceState1(Enum):
+class TransferState(str, Enum):
     requested = 'REQUESTED'
     started = 'STARTED'
     terminated = 'TERMINATED'
@@ -166,7 +166,7 @@ class ContractOfferMessage(JsonLd):
 class ContractNegotiation(JsonLd):
     field_type: Optional[str] = Field('dspace:ContractNegotiation', alias='@type')
     dscpace_process_id: Optional[str] = Field(None, alias='dscpace:processId')
-    dspace_state: Optional[DspaceState] = Field(None, alias='dspace:state')
+    dspace_state: Optional[TransferState] = Field(None, alias='dspace:state')
 
 
 class TransferRequestMessage(JsonLd):
@@ -195,7 +195,7 @@ class TransferStartMessage(JsonLd):
 class TransferProcess(JsonLd):
     field_type: Optional[str] = Field('dspace:TransferProcess', alias='@type')
     dscpace_process_id: Optional[str] = Field(None, alias='dscpace:processId')
-    dspace_state: Optional[DspaceState1] = Field(None, alias='dspace:state')
+    dspace_state: Optional[TransferState] = Field(None, alias='dspace:state')
 
 
 class DcatDataset(MyBaseModel):
