# pycxids/core/http_binding/negotiation_consumer_api.py
@@ -7,8 +7,7 @@
 from uuid import uuid4
 from fastapi import APIRouter, Body, Request, HTTPException, status
 
-from pycxids.core.http_binding.models import ContractOfferMessage, ContractAgreementMessage
-from pycxids.core.http_binding.negotiation_states import Requested
+from pycxids.core.http_binding.models import ContractOfferMessage, ContractAgreementMessage, NegotiationState
 from pycxids.core.http_binding.settings import KEY_DATASET, PROVIDER_STORAGE_FN, CONSUMER_STORAGE_AGREEMENTS_RECEIVED_FN, KEY_NEGOTIATION_REQUEST_ID, KEY_ID, KEY_STATE
 from pycxids.utils.storage import FileStorageEngine
 
